// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch when a launch is failed renders failed 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status fail"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019 15:31:00 GMT"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when a launch is successful renders successful 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019 15:31:00 GMT"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when a launch is upcoming renders upcoming 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status upcoming"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019 15:31:00 GMT"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when launch does not have details does not render the details section 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019 15:31:00 GMT"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when launch does not have mission ids does not render the mission ids info 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019 15:31:00 GMT"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
      >
        Details
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when launch is in progress renders in progress 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status inProgress"
    elevation={1}
  >
    <pure(MoreHorizRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019 15:31:00 GMT"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when launch is tentative renders date without time 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="Fri, 11 Jan 2019"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        size="small"
        to="/launches/1"
      >
        explore
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </WithStyles(Card)>
</div>
`;
